fix spacing between sections on collections - part of #356

--- a/web/themes/custom/asulib_barrio/scss/components/page.scss
+++ b/web/themes/custom/asulib_barrio/scss/components/page.scss
@@ -3,6 +3,53 @@
  * Styles for Bootstrap Barrio page.
  */
 
+.repo-item, .node--type-collection.node--view-mode-full {
+  h2 {
+    padding: 1.5rem 1rem;
+    background: $gray-2;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 1.75rem;
+  }
+  h3 {
+    font-size: 1.25rem;
+    margin-bottom: 1rem;
+    font-weight: bold;
+  }
+  .field--name-field-rich-description {
+    margin-bottom: $spacer;
+  }
+  .content-section {
+    margin-bottom: ($spacer * 2);
+  }
+}
+.node--type-collection .col-md-12 {
+//   padding-top: 0;
+  padding-left: 0;
+  padding-right: 0;
+//   padding-bottom: 0;
+}
+
+.small-margin-bottom {
+    margin-bottom: $small-padding;
+}
+.xs-margin-bottom {
+    margin-bottom: $xs-padding;
+}
+.large-margin-bottom {
+    margin-bottom: $large-padding;
+}
+.small-margin {
+    margin-top: $small-padding;
+    margin-bottom: $small-padding;
+}
+.small-margin-top {
+    margin-top: $small-padding;
+}
+.xs-margin-top {
+    margin-top: $xs-padding;
+}
+
 .small-padding-bottom {
     padding-bottom: $small-padding;
 }
