--- a/web/themes/custom/asulib_barrio/scss/style.scss
+++ b/web/themes/custom/asulib_barrio/scss/style.scss
@@ -92,27 +92,6 @@ body {
 /* remove padding from inside some views on repo item displays */
 .file-container .views-row { padding: 0; }
 
-.repo-item, .node--type-collection.node--view-mode-full {
-  h2 {
-    padding: 1.5rem 1rem;
-    background: $gray-2;
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 1.75rem;
-  }
-  h3 {
-    font-size: 1.25rem;
-    margin-bottom: 1rem;
-    font-weight: bold;
-  }
-  .field--name-field-rich-description {
-    margin-bottom: $spacer;
-  }
-  .content-section {
-    margin-bottom: ($spacer * 2);
-  }
-}
-
 // .main-content a {
 //   border-bottom: 1px dotted $maroon;
 // }
@@ -133,9 +112,6 @@ img { width: 100%; }
 
 /* Remove main content padding */
 .node__content.container {
-  padding: 0;
-}
-.node--type-collection .col-md-12 {
   padding: 0;
 }
 
